# diff-bot

./: .gitmodules  README.md
communication/: CMakeLists.txt  package.xml
communication/include/communication/: action_manager.hpp  communication_client.hpp  communication_server.hpp  lifecycle_manager.hpp  sensor_manager.hpp
communication/src/: action_manager.cpp  communication_client.cpp  communication_server.cpp  lifecycle_client.cpp  main.cpp  sensor_manager.cpp  test_cl.cpp
communication/test/: test_sub_sensor_config.py
diffbot_nav2/: CMakeLists.txt  README.md  package.xml
diffbot_nav2/launch/: location.launch.py  navigation_launch.py
diffbot_nav2/maps/: map_name.pgm  map_name.yaml
diffbot_nav2/params/: nav2_params.yaml
diffbot_nav2/test/launch/: costmap_filter_info.launch.py
diffbot_nav2/test/params/: params_file.yaml
interfaces/: CMakeLists.txt  README.md  package.xml
interfaces/msg/: Command.msg  Image.msg  Map.msg  Sensor.msg  SensorConfig.msg  Value.msg
micro_sensor/: CMakeLists.txt  Doxyfile  package.xml
micro_sensor/html/: graph_legend.html  index.html
micro_sensor/include/micro_sensor/: air_sensor.hpp  i2c_sensor.hpp  sensor_common.hpp
micro_sensor/latex/: refman.tex
micro_sensor/src/: air_sensor.cpp  i2c_sensor.cpp  main.cpp
scripts/: xueyang.py
servo_controller/: CMakeLists.txt  README.md  package.xml  servo_control.xml
servo_controller/bringup/config/: rrbot_controllers.yaml  rrbot_joint_trajectory_publisher.yaml
servo_controller/bringup/launch/: rrbot.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
servo_controller/description/launch/: view_robot.launch.py
servo_controller/description/ros2_control/: rrbot.ros2_control.xacro
servo_controller/description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
servo_controller/doc/: userdoc.rst
servo_controller/hardware/: rrbot.cpp  servo_controller.cpp
servo_controller/hardware/include/servo_control/: rrbot.hpp  servo_controller.h  visibility_control.h
servo_controller/test/: servo_control  test.cpp  test_urdf_xacro.py  test_view_robot_launch.py
speech_recognition/: CMakeLists.txt  README.md  package.xml
speech_recognition/include/speech_recognition/: linuxrec.h
speech_recognition/src/: keyworlds_recognition_node.cpp  linuxrec.c  speech_recognizer.c
